AutoRefactor: fix primitive wrappers usage