@@ -21,11 +21,9 @@
  * CDDL HEADER END
  *
  *
- *      Copyright 2012 ForgeRock AS.
+ *      Copyright 2012-2015 ForgeRock AS.
  */
 package org.opends.dsml.protocol;
-
-
 
 import java.util.HashMap;
 
@@ -39,51 +37,48 @@ public class ResultCodeFactory
     new HashMap<Integer,LDAPResultCode>();
   static
   {
-    codeToDescr.put(new Integer(0), LDAPResultCode.SUCCESS);
-    codeToDescr.put(new Integer(1), LDAPResultCode.OPERATIONS_ERROR);
-    codeToDescr.put(new Integer(2), LDAPResultCode.PROTOCOL_ERROR);
-    codeToDescr.put(new Integer(3), LDAPResultCode.TIME_LIMIT_EXCEEDED);
-    codeToDescr.put(new Integer(4), LDAPResultCode.SIZE_LIMIT_EXCEEDED);
-    codeToDescr.put(new Integer(5), LDAPResultCode.COMPARE_FALSE);
-    codeToDescr.put(new Integer(6), LDAPResultCode.COMPARE_TRUE);
-    codeToDescr.put(new Integer(7), LDAPResultCode.AUTH_METHOD_NOT_SUPPORTED);
+    codeToDescr.put(0, LDAPResultCode.SUCCESS);
+    codeToDescr.put(1, LDAPResultCode.OPERATIONS_ERROR);
+    codeToDescr.put(2, LDAPResultCode.PROTOCOL_ERROR);
+    codeToDescr.put(3, LDAPResultCode.TIME_LIMIT_EXCEEDED);
+    codeToDescr.put(4, LDAPResultCode.SIZE_LIMIT_EXCEEDED);
+    codeToDescr.put(5, LDAPResultCode.COMPARE_FALSE);
+    codeToDescr.put(6, LDAPResultCode.COMPARE_TRUE);
+    codeToDescr.put(7, LDAPResultCode.AUTH_METHOD_NOT_SUPPORTED);
     // Note not STRONGER_AUTH_REQUIRED, that's the RFC 4511 name
-    codeToDescr.put(new Integer(8), LDAPResultCode.STRONG_AUTH_REQUIRED);
-    codeToDescr.put(new Integer(10), LDAPResultCode.REFERRAL);
-    codeToDescr.put(new Integer(11), LDAPResultCode.ADMIN_LIMIT_EXCEEDED);
-    codeToDescr.put(new Integer(12),
+    codeToDescr.put(8, LDAPResultCode.STRONG_AUTH_REQUIRED);
+    codeToDescr.put(10, LDAPResultCode.REFERRAL);
+    codeToDescr.put(11, LDAPResultCode.ADMIN_LIMIT_EXCEEDED);
+    codeToDescr.put(12,
       LDAPResultCode.UNAVAILABLE_CRITICAL_EXTENSION);
-    codeToDescr.put(new Integer(13), LDAPResultCode.CONFIDENTIALITY_REQUIRED);
-    codeToDescr.put(new Integer(14), LDAPResultCode.SASL_BIND_IN_PROGRESS);
-    codeToDescr.put(new Integer(16), LDAPResultCode.NO_SUCH_ATTRIBUTE);
-    codeToDescr.put(new Integer(17), LDAPResultCode.UNDEFINED_ATTRIBUTE_TYPE);
-    codeToDescr.put(new Integer(18), LDAPResultCode.INAPPROPRIATE_MATCHING);
-    codeToDescr.put(new Integer(19), LDAPResultCode.CONSTRAINT_VIOLATION);
-    codeToDescr.put(new Integer(20), LDAPResultCode.ATTRIBUTE_OR_VALUE_EXISTS);
-    codeToDescr.put(new Integer(21), LDAPResultCode.INVALID_ATTRIBUTE_SYNTAX);
-    codeToDescr.put(new Integer(32), LDAPResultCode.NO_SUCH_OBJECT);
-    codeToDescr.put(new Integer(33), LDAPResultCode.ALIAS_PROBLEM);
-    codeToDescr.put(new Integer(34), LDAPResultCode.INVALID_DN_SYNTAX);
-    codeToDescr.put(new Integer(36),
-      LDAPResultCode.ALIAS_DEREFERENCING_PROBLEM);
-    codeToDescr.put(new Integer(48),
-      LDAPResultCode.INAPPROPRIATE_AUTHENTICATION);
-    codeToDescr.put(new Integer(49), LDAPResultCode.INVALID_CREDENTIALS);
-    codeToDescr.put(new Integer(50), LDAPResultCode.INSUFFICIENT_ACCESS_RIGHTS);
-    codeToDescr.put(new Integer(51), LDAPResultCode.BUSY);
-    codeToDescr.put(new Integer(52), LDAPResultCode.UNAVAILABLE);
-    codeToDescr.put(new Integer(53), LDAPResultCode.UNWILLING_TO_PERFORM);
-    codeToDescr.put(new Integer(54), LDAPResultCode.LOOP_DETECT);
-    codeToDescr.put(new Integer(64), LDAPResultCode.NAMING_VIOLATION);
-    codeToDescr.put(new Integer(65), LDAPResultCode.OBJECT_CLASS_VIOLATION);
-    codeToDescr.put(new Integer(66), LDAPResultCode.NOT_ALLOWED_ON_NON_LEAF);
-    codeToDescr.put(new Integer(67), LDAPResultCode.NOT_ALLOWED_ON_RDN);
-    codeToDescr.put(new Integer(68), LDAPResultCode.ENTRY_ALREADY_EXISTS);
-    codeToDescr.put(new Integer(69),
-      LDAPResultCode.OBJECT_CLASS_MODS_PROHIBITED);
+    codeToDescr.put(13, LDAPResultCode.CONFIDENTIALITY_REQUIRED);
+    codeToDescr.put(14, LDAPResultCode.SASL_BIND_IN_PROGRESS);
+    codeToDescr.put(16, LDAPResultCode.NO_SUCH_ATTRIBUTE);
+    codeToDescr.put(17, LDAPResultCode.UNDEFINED_ATTRIBUTE_TYPE);
+    codeToDescr.put(18, LDAPResultCode.INAPPROPRIATE_MATCHING);
+    codeToDescr.put(19, LDAPResultCode.CONSTRAINT_VIOLATION);
+    codeToDescr.put(20, LDAPResultCode.ATTRIBUTE_OR_VALUE_EXISTS);
+    codeToDescr.put(21, LDAPResultCode.INVALID_ATTRIBUTE_SYNTAX);
+    codeToDescr.put(32, LDAPResultCode.NO_SUCH_OBJECT);
+    codeToDescr.put(33, LDAPResultCode.ALIAS_PROBLEM);
+    codeToDescr.put(34, LDAPResultCode.INVALID_DN_SYNTAX);
+    codeToDescr.put(36, LDAPResultCode.ALIAS_DEREFERENCING_PROBLEM);
+    codeToDescr.put(48, LDAPResultCode.INAPPROPRIATE_AUTHENTICATION);
+    codeToDescr.put(49, LDAPResultCode.INVALID_CREDENTIALS);
+    codeToDescr.put(50, LDAPResultCode.INSUFFICIENT_ACCESS_RIGHTS);
+    codeToDescr.put(51, LDAPResultCode.BUSY);
+    codeToDescr.put(52, LDAPResultCode.UNAVAILABLE);
+    codeToDescr.put(53, LDAPResultCode.UNWILLING_TO_PERFORM);
+    codeToDescr.put(54, LDAPResultCode.LOOP_DETECT);
+    codeToDescr.put(64, LDAPResultCode.NAMING_VIOLATION);
+    codeToDescr.put(65, LDAPResultCode.OBJECT_CLASS_VIOLATION);
+    codeToDescr.put(66, LDAPResultCode.NOT_ALLOWED_ON_NON_LEAF);
+    codeToDescr.put(67, LDAPResultCode.NOT_ALLOWED_ON_RDN);
+    codeToDescr.put(68, LDAPResultCode.ENTRY_ALREADY_EXISTS);
+    codeToDescr.put(69, LDAPResultCode.OBJECT_CLASS_MODS_PROHIBITED);
     // Note not AFFECTS_MULTIPLE_DSAS, xjc mangles the string.
-    codeToDescr.put(new Integer(71), LDAPResultCode.AFFECT_MULTIPLE_DS_AS);
-    codeToDescr.put(new Integer(80), LDAPResultCode.OTHER);
+    codeToDescr.put(71, LDAPResultCode.AFFECT_MULTIPLE_DS_AS);
+    codeToDescr.put(80, LDAPResultCode.OTHER);
   }
 
   /**
@@ -100,7 +95,7 @@ public class ResultCodeFactory
   {
     ResultCode result = objFactory.createResultCode();
     result.setCode(resultCode);
-    Integer r = new Integer(resultCode);
+    Integer r = Integer.valueOf(resultCode);
     if (ResultCodeFactory.codeToDescr.containsKey(r))
     {
       result.setDescr(ResultCodeFactory.codeToDescr.get(r));
